tests/dev_and_build/errors/js_throw/js_throw_dev.test_manual.mjs
import { startDevServer } from "@jsenv/core";
import { jsenvPluginExplorer } from "@jsenv/plugin-explorer";

await startDevServer({
  sourceDirectoryUrl: import.meta.resolve("./client/"),
  clientAutoreload: {
    clientServerEventsConfig: {
      logs: false,
    },
  },
  plugins: [jsenvPluginExplorer()],
});
